--- a/src/style/init.css
+++ b/src/style/init.css
@@ -1,23 +1,52 @@
-html {-webkit-text-size-adjust: 100%;-ms-text-size-adjust: 100%;}
-input[type="submit"],
-input[type="reset"],
-input[type="button"],
-input{-webkit-appearance:none; resize: none;}
-img {max-width: 100%;height: auto;width:auto\9; /* ie8 */border: none;}
-/* 初始化开始*/
-*{margin:0; padding:0; border:none;box-sizing:border-box;}
-body{background-color:#fff;color:#666;font:.26rem/.4rem "Microsoft YaHei";}
-em,i,b{font-weight: normal;font-style: normal;}
-a{text-decoration:none; color:#969696;}
-a:hover{ text-decoration:none;}
-li{list-style:none;}
-h1, h2, h3, h4, h5, h6{ font-size:100%;font-weight: normal;}
-.clearfix:after{content:""; display:block; visibility:hidden; height:0; clear:both;}
-.clearfix{zoom:1;}
-.fl{float:left;}
-.fr{float:right;}
-input::-webkit-input-placeholder, textarea::-webkit-input-placeholder {color:#ff806b;}
-input:-moz-placeholder, textarea:-moz-placeholder {color: #ff806b;}
-input::-moz-placeholder, textarea::-moz-placeholder {color: #ff806b;}
-input:-ms-input-placeholder, textarea:-ms-input-placeholder {color: #ff806b;}
-/* 初始化结束 */
+a, abbr, acronym, address, applet, article, aside, audio, b, big, blockquote, body, canvas, caption, center, cite, code, dd, del, details, dfn, div, dl, dt, em, embed, fieldset, figcaption, figure, footer, form, h1, h2, h3, h4, h5, h6, header, hgroup, html, i, iframe, img, ins, kbd, label, legend, li, mark, menu, nav, object, ol, output, p, pre, q, ruby, s, samp, section, small, span, strike, strong, sub, summary, sup, table, tbody, td, tfoot, th, thead, time, tr, tt, u, ul, var, video{
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font: inherit;
+  vertical-align: baseline;
+  /*word-break:break-all;*/
+  word-wrap:break-word;
+}
+input{
+  white-space:nowrap;
+}
+input:-webkit-autofill {
+  -webkit-box-shadow: 0 0 0px 1000px #fff inset;
+}
+*{
+  background-repeat: no-repeat;
+  -webkit-tap-highlight-color:rgba(0,0,0,0);
+}
+ul,li,ol{
+  list-style: none;
+}
+img{
+  border: none;
+  -webkit-tap-highlight-color:rgba(0,0,0,0);
+}
+div {
+  box-sizing: border-box;
+}
+html, body{
+  height: 100%;
+}
+.content{
+  min-height: 100%;
+}
+a{
+  text-decoration: none;
+  border: none;
+  outline: none;
+  tap-highlight-color: rgba(0,0,0,0);
+  focus-ring-color: rgba(0, 0, 0, 0);
+  -webkit-tap-highlight-color: rgba(0,0,0,0);
+  -webkit-focus-ring-color: rgba(0, 0, 0, 0);
+  -moz-tap-highlight-color: rgba(0,0,0,0);
+  -moz-focus-ring-color: rgba(0, 0, 0, 0);
+}
+a:visited{
+  color: inherit;
+}
+input,button{
+  outline: none;
+}
